# voice-bot

./: .gitignore  main.py  pyproject.toml
app/: api.py  api2.py  api3.py  rag.py  stt.py  stt2.py
